[gd_scene load_steps=8 format=3 uid="uid://u3fwqvgrct4r"]

[ext_resource type="LabelSettings" uid="uid://d0ngxbsvkqk2n" path="res://assets/settings/labels/button_label_settings.tres" id="1_gem6f"]
[ext_resource type="Script" path="res://scripts/Area2DButton.gd" id="1_hdsiu"]
[ext_resource type="Texture2D" uid="uid://5l2kdjigrbec" path="res://assets/sprites/button1.png" id="2_tmm5c"]
[ext_resource type="Texture2D" uid="uid://sbbpntgnpmqu" path="res://assets/sprites/button2.png" id="3_11m13"]
[ext_resource type="AudioStream" uid="uid://ceiadu76lnhq4" path="res://assets/sounds/sfx_UIClick.ogg" id="5_orodj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m6dyt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tmm5c")
}, {
"duration": 1.0,
"texture": ExtResource("3_11m13")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xkhs4"]
size = Vector2(351, 119)

[node name="Button" type="Area2D"]
position = Vector2(960, 450)
script = ExtResource("1_hdsiu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.235, 1)
sprite_frames = SubResource("SpriteFrames_m6dyt")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -37.5
offset_right = 111.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
text = "Button text"
label_settings = ExtResource("1_gem6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -1.5)
shape = SubResource("RectangleShape2D_xkhs4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-4, -1)
stream = ExtResource("5_orodj")
volume_db = 2.0

[connection signal="clicked" from="." to="." method="_on_clicked"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
